# mrs_open_vins_estimator_plugin

./: CMakeLists.txt  README.md  estimator_plugins.xml  package.xml
custom_configs/: mrs_uav_managers.yaml
src/: open_vins_plugin.cpp
